[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.9",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.1",
    "cryptography>=43.0.1",
    "supabase>=2.7.4",
    "flask-migrate>=4.0.7",
    "flask-oauthlib>=0.9.6",
    "requests>=2.32.3",
    "flask-dance>=6.2.0",
    "sqlalchemy>=2.0.35",
    "werkzeug>=3.0.4",
    "requests-oauthlib",
    "replit>=4.1.0",
]
